# renkon

./: .gitignore  .gitmodules  LICENSE.txt  README.md  hatch.toml  pyproject.toml  ruff_defaults.toml  scratch.py
.github/scripts/: setup_ubuntu.sh
.github/workflows/: publish.yml  test.yml
.run/: Run Tests.run.xml  renkon web.run.xml
etc/: renkon.toml
etc/samples/: cereals-cleaned.csv
etc/synthetic/: linear1.csv
notebooks/: Bootstrapping.ipynb  CerealsExploration.ipynb  Datatypes.ipynb  Experiments.ipynb  InstExperiments.ipynb  LinearRegression.ipynb  RANSAC.ipynb  Scratch.ipynb  SolverExperiments.ipynb
scripts/: generate_coverage_summary.py  hatch_build.py  mypy_wrapper.py  write_coverage_summary_report.py
src/renkon/: __about__.py  __init__.py  __main__.py  api.py  cli.py  client.py  config.py  default.conf  defaults.toml  errors.py  renkon.defaults.toml  scratch.py  server.py  settings.py
src/renkon/_internal/: bitseries.py  dag.py  logger.py  permute.py  polars.py
src/renkon/_internal/task/: graph.py  result.py
src/renkon/api/: __init__.py  sample.py  stats.py
src/renkon/cli/: __init__.py  batch.py  client.py  server.py  simple.py  tty.py  web.py
src/renkon/core/: derivation.py  engine.py  hacking.py  hole.py  inference.py  instantiate.py  misc.py  process.py  reactor.py  renderer.py  rkty.py  sample.py  schema.py  sketch.py  strategy.py  taskgraph.py  trait.py  type_aliases.py
src/renkon/core/infer/strategy/: __init__.py  base.py  bernoulli.py  ransac.py
src/renkon/core/model/: __init__.py  bitseries.py  datatypes.py  dtypes.py  errors.py  result.py  schema.py  sketch.py  trait.py  type_aliases.py  types.py
src/renkon/core/model/trait/: __init__.py  _result.py  _sketch.py  _spec.py  form.py  info.py  kind.py  new.py  pattern.py  result.py  sketch.py  spec.py
src/renkon/core/model/type/: __init__.py  api.py  base.py  convert.py  grammar.py  parser.py
src/renkon/core/model/util/: bitseries.py  fstring.py
src/renkon/core/old_trait/: __init__.py  base.py  compare.py  integral.py  linear.py  negative.py  nonzero.py  positive.py
src/renkon/core/old_trait/util/: instantiate.py  load.py
src/renkon/core/repo/: __init__.py  _repo.py  repository.py  schema.py  util.py
src/renkon/core/repo/registry/: __init__.py  base.py
src/renkon/core/repo/registry/sqlite/: __init__.py  queries.py  queries.sql  registry.py
src/renkon/core/repo/storage/: __init__.py  base.py  fs.py
src/renkon/core/stats/: linear.py  normal.py  ransac.py
src/renkon/core/stats/base/: __init__.py  model.py  params.py  results.py
src/renkon/core/task/: graph.py
src/renkon/core/trait/: __init__.py  _pattern.py  _result.py  _sketch.py  _spec.py  _trait.py  base.py  compare.py  equal.py  instantiator.py  integral.py  linear.py  loader.py  negative.py  nonzero.py  positive.py  refinement.py
src/renkon/core/trait/infer/: __init__.py  base.py  bernoulli.py  ransac.py
src/renkon/core/trait/util/: instantiate.py  load.py
src/renkon/core/traits/: __init__.py  base.py  compare.py  comparison.py  refinement.py
src/renkon/core/type/: __init__.py  _base.py  _convert.py  _guards.py  _type.py
src/renkon/core/types/: __init__.py  kind.py  storage.py  type.py
src/renkon/core/util/: permute.py
src/renkon/infer/: inference.py  process.py  property.py  sampling.py  strategy.py  trait.py  type.py
src/renkon/repo/: __init__.py  info.py  queries.py  registry.py  registry.sql  repo.py  repository.py  storage.py  store.py
src/renkon/server/: flight.py
src/renkon/stats/: linear.py  model.py  normal.py  ransac.py  sampling.py  usac.py
src/renkon/stats/base/: model.py  params.py
src/renkon/stats/models/: linear.py  model.py  normal.py
src/renkon/store/: __init__.py  datastore.py  queries.py  registry.py  store.py  store.sql
src/renkon/task/: graph.py  result.py  task.py
src/renkon/traits/: __init__.py  compare.py  linear.py  refinement.py
src/renkon/util/: common.py  dag.py  logging.py  permute.py  polars.py  singleton.py
src/renkon/web/: app.py  htmx-ws.web-types.json  package-lock.json  package.json  tailwind.config.js
src/renkon/web/templates/: base.html.jinja  index.html.jinja  simple-list.html.jinja
tests/: conftest.py  dummy.py  renkon.tests.toml  test_config.py  test_dag.py  test_store.py
tests/core/: test_derivation.py  test_inference.py  test_rkty.py  test_sketch.py
tests/core/repo/: test_info.py  test_registry.py  test_repository.py  test_storage.py
tests/core/stats/: test_linear.py  test_normal.py
tests/core/task/: test_graph.py  test_result.py  test_task.py
tests/core/util/: test_permute.py
tests/renkon/: test_renderer.py  test_settings.py
tests/renkon/_internal/task/: test_graph.py  test_permute.py  test_result.py  test_task.py
tests/renkon/core/: test_schema.py  test_sketch.py
tests/renkon/core/model/: test_convert.py  test_dtypes.py  test_schema.py  test_sketch.py  test_trait.py  test_type.py
tests/renkon/core/model/trait/: form.py  info.py  test_instantiate.py  test_pattern.py  test_spec.py
tests/renkon/core/model/type/: test_base.py  test_convert.py  test_parser.py
tests/renkon/core/repo/: test_info.py  test_registry.py  test_repository.py  test_storage.py
tests/renkon/core/stats/: test_linear.py
tests/renkon/core/task/: test_graph.py
tests/renkon/core/trait/: test_pattern.py  test_spec.py
tests/renkon/core/type/: test_base.py  test_convert.py  test_parser.py  test_type.py
tests/renkon/core/util/: test_permute.py
tests/renkon/util/: test_dag.py
tests/renkon/web/: test_app.py
tests/repo/: test_info.py  test_registry.py  test_repository.py  test_storage.py
tests/stats/: test_linear.py  test_normal.py
tests/stats/models/: linear.py  test_linear.py
tests/store/: test_repository.py  test_storage.py  test_store.py
tests/task/: test_graph.py
