[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renkon"
dynamic = ["version"]
description = 'Robust likely invariant analysis over columnar data'
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
keywords = []
authors = [
    { name = "Dylan Lukes", email = "dlukes@ucsd.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    # Typing and Modeling
    "annotated-types", # Annotated type annotations
    "pydantic", # Data modeling and validation
    "pydantic-settings",

    # Data Processing
    "aiosql", # SQL
    "numpy", # Numerical computing
    "scikit-learn", # Machine learning
    "scipy", # Scientific computing
    "polars", # Data frames
    "pandas", # Data frames (not used, but needed for stubs in typings to not be Unknown)
    "pyarrow", # Columnar data format

    # Infrastructure
    "loguru", # Logging
    "dacite", # TODO: remove

    # CLI Interface
    "click", # CLI
    "rich", # Pretty console output

    # Web Interface
    "fastapi", # Web framework
    "uvicorn", # ASGI server
    "jinja2", # Templating
    "fasthx", # FastAPI extension for HTMX
]

optional-dependencies.dev = [
    "pyright",
    "pytest"
]

[project.urls]
Documentation = "https://github.com/DylanLukes/renkon#readme"
Issues = "https://github.com/DylanLukes/renkon/issues"
Source = "https://github.com/DylanLukes/renkon"

[project.scripts]
renkon = "renkon.cli:cli"

# Tool Configurations
# ===================

# Hatch
# -----

[tool.hatch.version]
path = "src/renkon/__about__.py"

[tool.hatch.envs.default.scripts]
lint = [
    "hatch fmt",
    "hatch run types:check"
]

[tool.hatch.envs.types]
extra-dependencies = [ "pyright", "pytest" ]

[tool.hatch.envs.types.scripts]
check = "pyright {args:src/renkon tests/}"

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"

# Pytest
# ------

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=typings --ignore=scripts"

# Pyright
# -------

[tool.pyright]
include = ["./src", "./tests"]
stubPath = "./typings/stubs/"

typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = true

pythonVersion = "3.12"

# Ruff
# ----

[tool.ruff]
extend = "ruff_defaults.toml"
exclude = [".hatch", "scripts", "typings"]

# Coverage
# --------

[tool.coverage.run]
source_pkgs = ["renkon", "tests"]
branch = true
parallel = true
omit = [
    "src/renkon/__about__.py",
]

[tool.coverage.paths]
hatch_demo = ["src/renkon", "*/renkon/src/renkon"]
tests = ["tests", "*/renkon/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
